<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.fragments.settings.SettingsFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberCarInputLayout"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/registr_number"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carSpinnerInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_car"
            android:layout_margin="16dp">

            <AutoCompleteTextView
                android:id="@+id/carAutoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/carNames" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/dark_theme"/>

    </LinearLayout>
</layout>