<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="zone"
            type="com.example.domain.models.Zone" />
        <variable
            name="observerZoneId"
            type="String" />
    </data>


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Elevated"
        navigateToZoneDetails="@{zone}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@{zone.name}"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                tools:text="Берестовица" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{zone.address}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="Гродненская обл., Берестовицкий р-н, ГП Пограничный (ПП Берестов. — Бобровники)" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/all_cars"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{String.valueOf(zone.countAll)}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="981" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/all_passenger_car"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{String.valueOf(zone.countCar)}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="94" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/registration"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{String.valueOf(zone.countLiveQueue)}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="94" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/priority"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@{String.valueOf(zone.countPriority)}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/phone"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:fontFamily="@font/roboto"
                android:lineHeight="20sp"
                android:text="@{zone.phone.trim()}"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:text="+375 (33) 653-22-88\n+375 (33) 653-22-88" />


            <Button
                android:id="@+id/observerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:zone="@{zone}"
                app:observerId="@{observerZoneId}"
                android:text="@string/track" />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>